--- a/Mi primer sitio.html
+++ b/Mi primer sitio.html
@@ -83,7 +83,7 @@
             </aside>
             <footer>
                 <address>
-                    Andrea Figueira<br>
+                    Andrea Figueira.<br>
                     andyfc2001@gmail.com 
                 </address>
                 <p>Copyright &copy; 2001-2021 Andrea Figueira, todos los derechos reservados.</p>      
