--- a/Mi segunda página.html
+++ b/Mi segunda página.html
@@ -15,6 +15,13 @@
                 <div class="centrado">Centrado</div>
                 </div>
             </header>
+            <nav class="Menu">
+                <ul>
+                    <li><a href="Mi primer sitio.html">Inicio</a></li>
+                    <li><a href="#">Sobre nosotros</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </nav>
             <section>
                 <h1>Sobre nosotros</h1>
                 <p>Somos una página que te facilita el trabajo de buscar alojamiento y precios a la hora de viajar a Italia</p>
