--- a/Mi primer sitio.html
+++ b/Mi primer sitio.html
@@ -16,7 +16,7 @@
             <nav class="Menu">
                 <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="Mi segunda página.html">Sobre nosotros</a></li>
+                    <li><a href="Mi segundo sitio.html">Sobre nosotros</a></li>
                     <li><a href="#">Contacto</a></li>
                 </ul>
             </nav>
